MTTF and SSU Added

--- a/decaf/decaf2.5.csproj
+++ b/decaf/decaf2.5.csproj
@@ -35,11 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics">
+      <HintPath>..\packages\MathNet.Numerics.2.2.1\lib\Net40\MathNet.Numerics.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics.IO">
+      <HintPath>..\packages\MathNet.Numerics.2.2.1\lib\Net40\MathNet.Numerics.IO.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.5.9\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +59,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="zlib.net">
+      <HintPath>..\packages\zlib.net.1.0.4.0\lib\zlib.net.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -76,9 +86,7 @@
     <Compile Include="src\processes\ConfigParser.cs" />
     <Compile Include="src\structures\JSON.cs" />
     <Compile Include="src\structures\Node.cs" />
-    <Compile Include="src\structures\Point.cs" />
     <Compile Include="src\Simulation.cs" />
-    <Compile Include="src\structures\State.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -113,9 +121,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="App_Readme\MathNet.Numerics.readme.txt" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="data\input.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="App_Readme\MathNet.Numerics.copyright.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="App_Readme\MathNet.Numerics.authors.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
